package p10_observer;

public class ConcreteSubject extends Subject {

    private String action;

    public String getAction() {
        return action;
    }

    public void setAction(String action) {
        this.action = action;
    }
}
