package p10_observer;

public interface Observer {
    void update();
}
